<resources>
    <string name="app_name">EverGreen</string>
    <string name="mb_home_text">首页</string>
    <string name="mb_type_text">样品种类</string>
    <string name="mb_history_text">历史数据</string>
    <string name="mb_version_text">版本更新</string>
    <string name="mb_exit_hint">再按一次返回退出</string>
    <string name="mb_test">样品检测</string>
    <string name="dialog_positive">确 定</string>
    <string name="dialog_negative">取 消</string>
    <string name="user_register">新用户注册</string>
    <string name="user_login">登录</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系我们</string>
    <string name="version_update">检查更新</string>
    <string name="switch_language">中文/ENG</string>
    <string name="version_code">版本号</string>
    <string name="register">注册</string>
    <string name="edt_phone">*手机号</string>
    <string name="edt_pwd">密码</string>
    <string name="edt_confirm_pwd">确认密码</string>
    <string name="edt_surname">姓名</string>
    <string name="edt_company">机构名</string>
    <string name="tv_tip">*必填</string>
    <string name="has_account">已有账户？点击登录</string>
    <string name="has_not_account">还没有账户？点击注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="phone_tip">手机号不能为空</string>
    <string name="edt_user_name">用户名</string>
    <string name="set_pwd">设置密码</string>
    <string name="next">下一步</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="about">关于</string>
    <string name="new_test">新测试</string>
    <string name="manager_data">管理数据</string>
    <string name="title_evergreen">智能读数仪</string>
    <string name="new_user_register">新用户注册</string>
    <string name="test_name">测试名称</string>
    <string name="test_serial">测试批号</string>
    <string name="test_num">样品编号</string>
    <string name="test_history">历史数据</string>
    <string name="test_manager">数据管理</string>
    <string name="test_setting">检测设置</string>
</resources>
