<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/user_register"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/background_corners"
        android:orientation="vertical">

        <com.android.mb.evergreen.widget.ClearableEditText
            android:id="@+id/edt_user_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:hint="@string/edt_phone"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="14sp" />

        <com.android.mb.evergreen.widget.ClearableEditText
            android:id="@+id/edt_user_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:hint="@string/edt_pwd"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="14sp" />

        <com.android.mb.evergreen.widget.ClearableEditText
            android:id="@+id/edt_user_comfirmpwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:hint="@string/edt_comfirmpwd"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="14sp" />

        <com.android.mb.evergreen.widget.ClearableEditText
            android:id="@+id/edt_user_surname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:hint="@string/edt_surname"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="14sp" />

        <com.android.mb.evergreen.widget.ClearableEditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:hint="@string/edt_name"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="14sp" />

        <com.android.mb.evergreen.widget.ClearableEditText
            android:id="@+id/edt_user_company"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:hint="@string/edt_company"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="10sp"
            android:layout_gravity="start"
            android:text="@string/haved_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="10sp"
            android:layout_gravity="start"
            android:text="@string/forget_pwd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="10sp"
            android:layout_gravity="start"
            android:text="@string/tv_tip"/>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/register"/>



</LinearLayout>
