<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_home"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/bg_logo"
        android:layout_marginTop="120dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/bg_tm"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_black_1"
        android:textSize="26sp"
        android:text="@string/title_evergreen"/>
    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@mipmap/bg_button"
        android:text="@string/user_register"/>
    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@mipmap/bg_button"
        android:text="@string/user_login"/>
    <TextView
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@mipmap/bg_button"
        android:text="@string/about"/>
    <TextView
        android:id="@+id/btn_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@mipmap/bg_button"
        android:text="@string/contact_us"/>
    <TextView
        android:id="@+id/btn_language"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/text_black_1"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/bg_button"
        android:text="@string/switch_language"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Copyright @2018 Evergeen Sciences,Inc Allrights reserved."
            android:textColor="@color/text_black_3"
            android:textSize="12sp"
            android:gravity="center"
           />
        <TextView
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_1"
            android:textSize="12sp"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_setting"
            android:text="VER.BETA"/>
    </LinearLayout>
</LinearLayout>
