<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/bg_tm_top"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:textColor="@color/text_black_1"
        android:textSize="18sp"
        android:text="欢迎回来xxxxx"/>
    <TextView
        android:id="@+id/btn_new_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@mipmap/bg_button"
        android:text="@string/new_test"/>
    <TextView
        android:id="@+id/btn_manager_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@mipmap/bg_button"
        android:text="@string/manager_data"/>
    <TextView
        android:id="@+id/btn_test_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@mipmap/bg_button"
        android:text="@string/test_setting"/>
    <TextView
        android:id="@+id/btn_back"
        android:layout_width="64dp"
        android:layout_height="26dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@mipmap/bg_button"
        android:layout_gravity="right"
        android:text="@string/exit"/>
</LinearLayout>
