<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/bg_activity"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/bg_tm_top"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textColor="@color/text_black_1"
        android:textSize="20sp"
        android:text="@string/manager_data"/>
    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="@string/test_name"/>
    <LinearLayout
        android:id="@+id/btn_test_name"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border_edit_black"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/tv_test_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_black_1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_item_down"/>
    </LinearLayout>
    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="查询开始时间"/>
    <LinearLayout
        android:id="@+id/btn_start_time"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border_edit_black"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_black_1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_item_down"/>
    </LinearLayout>
    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/text_black_1"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="查询结束时间"/>
    <LinearLayout
        android:id="@+id/btn_end_time"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border_edit_black"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_black_1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_item_down"/>
    </LinearLayout>
    <TextView
        android:id="@+id/btn_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@mipmap/bg_button"
        android:layout_gravity="center"
        android:textColor="@color/text_black_1"
        android:text="查询"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="@color/white"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_tab_history"
            android:text="@string/test_history"
            android:textColor="@color/text_black_1"
            android:textSize="12sp"
            android:gravity="center"
            />
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/text_black_2"/>
        <TextView
            android:id="@+id/btn_manager"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_tab_manage"
            android:text="@string/test_manager"
            android:textColor="@color/text_black_1"
            android:textSize="12sp"
            android:gravity="center"
            />
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/text_black_2"/>
        <TextView
            android:id="@+id/btn_setting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_tab_setting"
            android:text="@string/test_setting"
            android:textColor="@color/text_black_1"
            android:textSize="12sp"
            android:gravity="center"
            />
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/text_black_2"/>
        <TextView
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_tab_logout"
            android:text="@string/exit"
            android:textColor="@color/text_black_1"
            android:textSize="12sp"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>
